@@ -20,10 +20,13 @@ use SVNFileLocator;
 # ************************************************************
 
 sub create {
+  ## Check for Subversion first.  It is unlikely that the .svn directory 
+  ## will exist when Subversion isn't the rcs being used.  However, that 
+  ## is not the case for CVS directories.
   switch: {
-    -d 'CVS'  && do { return new CVSFileLocator(); };
     ((defined $ENV{SVN_ASP_DOT_NET_HACK} && -d '_svn') || -d '.svn')
       && do { return new SVNFileLocator(); };
+    -d 'CVS'  && do { return new CVSFileLocator(); };
     print STDERR "WARNING: Unsupported revision control protocol\n";
   }
 
